# bug-report-django-graphene

./: pyproject.toml
repro/: db.sqlite3
repro/repro/: asgi.py  models.py  schema.py  settings.py  urls.py  wsgi.py
