[tool.poetry]
name = "bug-report-django-graphql"
version = "0.1.0"
description = ""
authors = ["Ewen Le Bihan <hey@ewen.works>"]
readme = "README.md"
packages = [{include = "bug_report_django_graphql"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
graphene-django = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
